# cull

./: .gitignore  bvh.py  catalog.py  cli.py  compare.py  context_dump.txt  geometry.py  gpu_grid.py  gpu_lbvh_diagnostics.py  gpu_lbvh_for_dia.py  gpu_prelim.py  gpu_truth.py  numba_nvvm_test.py  orbit.py  orbit_cuda_env.ps1  orbit_legacy.py  orbit_types.py  orbit_v19_batch32_cell_pairs_ncu.ncu-rep  orbit_v19_batch32_cell_pairs_one.ncu-rep  orbit_v19_nsys.nsys-rep  probe.py  profile_device_pipeline.py  profile_vallado_device_prop.py  propagation.py  prove_state_diff.logс  prove_state_diff.py  reporting.py  risk.py  setup_csr.py  smoke.py  test_vallado_probe.py  tletest.py  traverse.bat  traverse.py  truth.py  truth_active_full_h3_step60_r50.npz  truth_cache.py  visualize_candidates.py
csr/: __init__.py  csr.cp312-win_amd64.pyd  csr.cpp  csr_kernel.cu  csr_kernel.h  setup_csr.py
csr/csr/: csr.cp312-win_amd64.pyd
sgp_cuda/: CMakeLists.txt  __init__.py  build.ps1  build.sh  create.ps1  cull_grid_cuda.cpp  cull_grid_cuda_kernel.cu  cull_grid_cuda_kernel.h  orbit_sgp4.h  orbit_sgp4_bench.cpp  orbit_sgp4_cuda.cu  orbit_sgp4_device_propagate.cuh  orbit_sgp4_host.cpp  orbit_sgp4_vallado_bridge.cpp  pyproject.toml  setup_cull_grid_cuda.py  sgp_cuda.cpp
